--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "start": "next start",
     "lint": "next lint",
     "export": "next export",
-    "gh-pages": "next build && next export"
+    "gh-pages": "next build && next export",
+    "deploy": "npm run build && touch ./out/.nojekyll"
   },
   "dependencies": {
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "touch-cli": "^0.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
